name:          sdp-quickcheck
version:       0.2
category:      Data Structures

synopsis:      See README.md
description:   See README.md

author:        Andrey Mulik
maintainer:    work.a.mulik@gmail.com
bug-reports:   https://github.com/andreymulik/sdp-quickcheck/issues

copyright:     2020 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp-quickcheck

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  
  build-depends:
    base       >= 4.12 && < 5,
    sdp        >= 0.2  && < 0.3,
    QuickCheck >= 2.12 && < 3
  
  ghc-options: -O2 -Wall -Wno-orphans
  
  exposed-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP

---            _____  _____  _____  _____  _____  _   _  _____               ---
---           |_   _||  ___|/  ___||_   _||_   _|| \ | ||  __ \              ---
---             | |  | |__  \ `--.   | |    | |  |  \| || |  \/              ---
---             | |  |  __|  `--. \  | |    | |  | . ` || | __               ---
---             | |  | |___ /\__/ /  | |   _| |_ | |\  || |_\ \              ---
---             \_/  \____/ \____/   \_/   \___/ \_| \_/ \____/              ---

test-suite test-indices
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-indices.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

test-suite test-array
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-array.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

test-suite test-bytes
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-bytes.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

test-suite test-unrolled
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-unrolled.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

test-suite test-bytelist
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-bytelist.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

test-suite test-ublist
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-ublist.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

test-suite test-unlist
  default-language: Haskell2010
  hs-source-dirs:   test, src
  
  type:             exitcode-stdio-1.0
  main-is:          test-unlist.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.12 && < 5,
    sdp                        >= 0.2  && < 0.3,
    QuickCheck                 >= 2.12 && < 3,
    test-framework             >= 0.8  && < 0.9,
    test-framework-quickcheck2 >= 0.3  && < 0.4
  
  ghc-options: -O2 -Wall -Wno-orphans

---   ______ _____ _   _ _____  _   _ ___  ___  ___  ______ _   __ _____     ---
---   | ___ \  ___| \ | /  __ \| | | ||  \/  | / _ \ | ___ \ | / //  ___|    ---
---   | |_/ / |__ |  \| | /  \/| |_| || .  . |/ /_\ \| |_/ / |/ / \ `--.     ---
---   | ___ \  __|| . ` | |    |  _  || |\/| ||  _  ||    /|    \  `--. \    ---
---   | |_/ / |___| |\  | \__/\| | | || |  | || | | || |\ \| |\  \/\__/ /    ---
---   \____/\____/\_| \_/\____/\_| |_/\_|  |_/\_| |_/\_| \_\_| \_/\____/     ---

benchmark bench-sort
  default-language: Haskell2010
  hs-source-dirs:   bench, src
  
  type:             exitcode-stdio-1.0
  main-is:          bench-sort.hs
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base               >= 4.12 && < 5,
    sdp                >= 0.2  && < 0.3,
    criterion          >= 1.5  && < 1.6,
    QuickCheck         >= 2.12 && < 3
  
  ghc-options: -O2 -Wall -Wno-orphans


