name:          sdp-quickcheck
version:       0.3
category:      Data Structures

synopsis:      SDP QuickCheck support
description:   Arbitrary instances for SDP structures

author:        Andrey Mulik
maintainer:    <work.a.mulik@gmail.com>
bug-reports:   https://github.com/andreymulik/sdp-quickcheck/issues

copyright:     2020 Andrey Mulik
license-file:  LICENSE
license:       BSD3

build-type:    Simple
cabal-version: >=1.10

tested-with:
  -- lts-7.24
  GHC == 8.0.1,
  -- lts-9.21
  GHC == 8.0.2,
  -- lts-11.22
  GHC == 8.2.2,
  -- lts-12.26
  GHC == 8.4.4,
  -- lts-18.8
  GHC == 8.10.6

source-repository head
  type: git
  location: https://github.com/andreymulik/sdp-quickcheck

---            _      _____ ______ ______   ___  ______ __   __              ---
---           | |    |_   _|| ___ \| ___ \ / _ \ | ___ \\ \ / /              ---
---           | |      | |  | |_/ /| |_/ // /_\ \| |_/ / \ V /               ---
---           | |      | |  | ___ \|    / |  _  ||    /   \ /                ---
---           | |____ _| |_ | |_/ /| |\ \ | | | || |\ \   | |                ---
---           \_____/ \___/ \____/ \_| \_|\_| |_/\_| \_|  \_/                ---

Library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    sdp        >= 0.3 && < 1,
    base       >= 4.9 && < 5,
    QuickCheck >= 2.8 && < 3
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS
  
  exposed-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Index
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP

---            _____  _____  _____  _____  _____  _   _  _____               ---
---           |_   _||  ___|/  ___||_   _||_   _|| \ | ||  __ \              ---
---             | |  | |__  \ `--.   | |    | |  |  \| || |  \/              ---
---             | |  |  __|  `--. \  | |    | |  | . ` || | __               ---
---             | |  | |___ /\__/ /  | |   _| |_ | |\  || |_\ \              ---
---             \_/  \____/ \____/   \_/   \___/ \_| \_/ \____/              ---

test-suite test-indices
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-indices.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Index
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 && <   5,
    sdp                        >= 0.3 && <   1,
    QuickCheck                 >= 2.8 && <   3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

test-suite test-array
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-array.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 && <   5,
    sdp                        >= 0.3 && <   1,
    QuickCheck                 >= 2.8 && <   3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

test-suite test-bytes
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-bytes.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 && <   5,
    sdp                        >= 0.3 && <   1,
    QuickCheck                 >= 2.8 && <   3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

test-suite test-unrolled
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-unrolled.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 && <   5,
    sdp                        >= 0.3 && <   1,
    QuickCheck                 >= 2.8 && <   3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

test-suite test-bytelist
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-bytelist.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 &&   < 5,
    sdp                        >= 0.3 &&   < 1,
    QuickCheck                 >= 2.8 &&   < 3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

test-suite test-ublist
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-ublist.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 && <   5,
    sdp                        >= 0.3 && <   1,
    QuickCheck                 >= 2.8 && <   3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

test-suite test-unlist
  default-language: Haskell2010
  hs-source-dirs:   test, src
  main-is:          test-unlist.hs
  type:             exitcode-stdio-1.0
  
  other-modules:
    Test.SDP.Arbitrary
    Test.SDP.Estimate
    Test.SDP.Indexed
    Test.SDP.Linear
    Test.SDP.Split
    Test.SDP.Sort
    Test.SDP.Set
    Test.SDP.Gen
    Test.SDP.Ord
    Test.SDP.Eq
    Test.SDP
  
  build-depends:
    base                       >= 4.9 && <   5,
    sdp                        >= 0.3 && <   1,
    QuickCheck                 >= 2.8 && <   3,
    test-framework             >= 0.8 && < 0.9,
    test-framework-quickcheck2 >= 0.3 && < 0.4
  
  ghc-options: -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

---   ______ _____ _   _ _____  _   _ ___  ___  ___  ______ _   __ _____     ---
---   | ___ \  ___| \ | /  __ \| | | ||  \/  | / _ \ | ___ \ | / //  ___|    ---
---   | |_/ / |__ |  \| | /  \/| |_| || .  . |/ /_\ \| |_/ / |/ / \ `--.     ---
---   | ___ \  __|| . ` | |    |  _  || |\/| ||  _  ||    /|    \  `--. \    ---
---   | |_/ / |___| |\  | \__/\| | | || |  | || | | || |\ \| |\  \/\__/ /    ---
---   \____/\____/\_| \_/\____/\_| |_/\_|  |_/\_| |_/\_| \_\_| \_/\____/     ---

benchmark bench-sort
  default-language: Haskell2010
  hs-source-dirs:   bench, src
  main-is:          bench-sort.hs
  type:             exitcode-stdio-1.0
  
  other-modules: Test.SDP.Gen
  build-depends:
    base        >= 4.9 && <   5,
    sdp         >= 0.3 && <   1,
    sdp-deepseq >= 0.2 && <   1,
    QuickCheck  >= 2.8 && <   3,
    criterion   >= 1.5 && < 1.6
  
  ghc-options: -O2 -Wall -Wno-orphans
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS

benchmark bench-sort-io
  default-language: Haskell2010
  hs-source-dirs:   bench, src
  ghc-options:      -O2 -Wall -Wno-orphans
  main-is:          bench-sort-io.hs
  type:             exitcode-stdio-1.0
  
  other-modules: Test.SDP.Gen
  build-depends:
    base         >= 4.9 && <   5,
    sdp          >= 0.3 && <   1,
    sdp-deepseq  >= 0.2 && <   1,
    criterion    >= 1.5 && < 1.6,
    QuickCheck   >= 2.8 && <   3
  
  if impl(ghc >= 8.6)
    cpp-options: -DSDP_QUICKCHECK_QUALIFIED_CONSTRAINTS




